fix siteorigin error : .so-panel, .panel-grid-cell

--- a/css/apt_widget.css
+++ b/css/apt_widget.css
@@ -35,3 +35,9 @@
 .panel-grid-cell {
   min-height: 0px !important;
 }
+.so-panel {
+  margin-bottom: 0px !important;
+}
+.panel-grid-cell {
+  margin-bottom: 0px !important;
+}
